WIP expose device-name functionality to clients

--- a/components/service/firefox-accounts/build.gradle
+++ b/components/service/firefox-accounts/build.gradle
@@ -49,6 +49,7 @@ dependencies {
 
     api Deps.mozilla_fxa
 
+    implementation project(':support-base')
     implementation Deps.kotlin_stdlib
     implementation Deps.jna
     implementation Deps.kotlin_coroutines
