--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ allprojects {
     repositories {
         google()
         jcenter()
+        mavenLocal()
 
         maven {
             url "https://maven.mozilla.org/maven2"
